[tool.poetry]
name = "4data-api"
version = "0.1.0"
description = ""
authors = ["t3rrey <lachlanterrey@yahoo.com>"]
readme = "README.md"
packages = [{include = "4data_api"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
